src/WebApp/wwwroot/css/site.css
/* ... */
/* Table of Contents
-------------------------------------------------- */
#toc-container {
    top: 2rem;
    z-index: 900;
}

.toc-item {
    border: none;
    font-size: .929rem;
}

/* ==================================================
Print styles
================================================== */
@media print {
    @page {
        margin: .5in;
    }

    :root,
    :root[data-bs-theme="dark"] {
        --bs-body-color: #000;
        --bs-body-bg: #fff;
        --bs-secondary-color: #333;
    }

    :root {
        color-scheme: only light;
    }

    header.sticky-top {
        position: static;
    }

    .banner-test-site,
    [data-bs-theme="dark"] .banner-test-site {
        position: static;
        text-shadow: none;
        box-shadow: none;
        border: 1px solid;
        margin-bottom: 1rem;
        background: hsl(45, 100%, 80%);
        color: var(--bs-body-color);
    }

    .banner-test-site::after {
        content: "—Not for public distribution";
    }

    .accordion-item, .table * {
        color: var(--bs-body-color) !important;
        background-color: var(--bs-body-bg) !important;
    }
}

/* Collapsible tables
-------------------------------------------------- */
@media screen and (max-width: 768px) {
    .table-collapsible {
        border: 0;
    }

    .table-collapsible thead th {
        display: none;
    }

    .table-collapsible thead tr.sortable::before {
        content: "Sort by:";
        display: inline-block;
        padding: .5rem 0.5rem;
        font-weight: 700;
    }

    .table-collapsible thead th.sortable {
        display: inline-block;
        border-bottom: none;
    }

    .table-collapsible tr {
        display: block;
    }

    .table-collapsible tfoot tr,
    .table-collapsible tbody tr {
        margin-bottom: 1rem;
        border-top: 2px solid #5b616b;
    }

    .table-collapsible tbody th {
        background-color: rgb(var(--bs-secondary-bg-rgb));
    }

    .table-collapsible th,
    .table-collapsible td {
        display: block;
        text-align: left;
        border-bottom: 1px solid #aeb0b5;
        border-left: none;
        border-right: none;
        border-top: none;
        padding: 0.5rem 0.5rem;
    }

    .table-collapsible th::after,
    .table-collapsible td::after {
        clear: both;
        content: "";
        display: block;
    }

    .table-collapsible th:last-child,
    .table-collapsible td:last-child {
        border-bottom: none;
    }

    .table-collapsible tbody th:before, .table-collapsible td:before {
        content: attr(data-label) ": ";
        font-weight: 700;
    }

    .table-collapsible tbody th .btn {
        vertical-align: baseline;
    }
} 

